--- a/assets/css/role.css
+++ b/assets/css/role.css
@@ -53,3 +53,28 @@ body {
     font-size: 2.8rem;
     margin-top: 24px;
 }
+.back-btn {
+    flex: 1;
+    margin-top: 24px;
+    border: none;
+    outline: none;
+    background-color: var(--primary-color);
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.4s;
+    text-align: center;
+    cursor: pointer;
+}
+
+.back-btn a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding: 12px 24px;
+    text-decoration: none;
+    font-size: 2rem;
+    color: #fff;
+}
+.back-btn:hover {
+    background-color: var(--active-color);
+}
