--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,8 +30,9 @@
     border: none;
     outline: none;
     width: 80%;
-    height: 32px;
+    padding: 12px;
     margin-top: 32px;
+    text-align: center;
     background-color: var(--primary-color);
     border-radius: 8px;
     cursor: pointer;
