--- a/assets/css/account.css
+++ b/assets/css/account.css
@@ -1,3 +1,124 @@
-.item {
+.container {
+    width: 100%;
+    min-height: 90vh;
+    margin: 5vh 0;
+    padding: 24px;
+    border-radius: 8px;
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.5);
+    background-color: #fff;
+}
+
+.info__main,
+.info__detail {
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 32px;
+    font-size: 1.6rem;
+}
+
+.info__main-image {
+    width: 150px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: 1px solid var(--primary-color);
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.info__main-image img {
+    width: 100%;
+}
+
+.info__main-name {
+    text-align: center;
+    margin-top: 12px;
+    font-weight: 800;
+}
+
+.info__main-role {
+    text-align: center;
+    margin: 4px 0 12px 0;
+    font-size: 1.3rem;
+}
+
+.info__main-list {
+    list-style-type: none;
+}
+
+.info__main-list-item {
+    margin-top: 12px;
+    padding: 12px 24px;
+    cursor: pointer;
+}
+
+.info__main-list-item:not(.item--active):hover {
+    background-color: #f6f8f9;
+}
+
+.back {
+    width: 100%;
+}
+
+.back-btn {
+    float: right;
+    margin-top: 12px;
+    border: none;
+    outline: none;
+    background-color: var(--primary-color);
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.4s;
+    text-align: center;
+    cursor: pointer;
+}
+
+.back-btn a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding: 12px 24px;
+    text-decoration: none;
+    font-size: 2rem;
+    color: #fff;
+}
+.back-btn:hover {
+    background-color: var(--active-color);
+}
+
+.info__detail {
+    position: relative;
+}
+
+.info__detail-list {
+    width: 100%;
+    list-style-type: none;
+}
+
+.info__detail-list-item {
+    width: 100%;
+    display: flex;
+    margin-top: 4px;
+    padding: 12px 24px;
+    background-color: #f6f8f9;
+}
+
+.info__detail-list-item-attribute {
+    width: 30%;
+}
+
+.info__detail-list-item-content {
+    flex: 1;
+    font-weight: 800;
+}
+
+/* Mobile resolution */
+@media (max-width: 739px) {
+    .item {
+        min-height: 300px;
+    }
+}
+/* Tablet resolution */
+@media (min-width: 740px) and (max-width: 1023px) {
     
 }
