--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -28,6 +28,10 @@ html {
     font-weight: 800;
     color: var(--primary-color);
 }
+
+.item--active {
+    background-color: #c0f3c3;
+}
 @keyframes showIn {
     from {
         transform: scale(0.7);
